--- a/todo-app/todo-backend/package.json
+++ b/todo-app/todo-backend/package.json
@@ -9,9 +9,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "mongoose": "^5.13.2",
-    "morgan": "~1.9.1",
+    "express": "^4.22.1",
+    "mongoose": "^9.0.1",
+    "morgan": "^1.10.1",
     "redis": "^3.1.2"
   },
   "devDependencies": {
