--- a/todo-app/todo-backend/package.json
+++ b/todo-app/todo-backend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "mongoose": "^9.0.1",
     "morgan": "^1.10.1",
