--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -7,16 +7,34 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
       MONGO_INITDB_DATABASE: the_database
-    volumes: 
+    volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - mongo_data:/data/db
+
   redis:
     image: redis
     ports:
       - 6379:6379
-    command: ['redis-server', '--appendonly', 'yes'] # Overwrite the CMD
-    volumes: # Declare the volume
+    command: ['redis-server', '--appendonly', 'yes']
+    volumes:
       - redis_data:/data
+
+  server:
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    image: todo-backend-dev
+    ports:
+      - 3000:3000
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - MONGO_URL=mongodb://root:example@mongo:27017/the_database?authSource=admin
+    volumes:
+      - ./:/usr/src/app
+      - /usr/src/app/node_modules
+    depends_on:
+      - mongo
+      - redis
 
 volumes:
   mongo_data:
