--- a/todo-app/nginx.dev.conf
+++ b/todo-app/nginx.dev.conf
@@ -14,7 +14,12 @@ http {
       proxy_set_header Connection 'upgrade';
       
       # Requests are directed to http://localhost:5173
-      proxy_pass http://localhost:5173;
+      proxy_pass http://todo-frontend:5173;
+    }
+
+     # Requests starting with /api/ are handled
+    location /api/ {
+      proxy_pass http://todo-backend:3000/;
     }
   }
 }
