--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -2,11 +2,13 @@ services:
   nginx:
     image: nginx:1.25-alpine
     ports:
-      - "8080:80"
+      - 8080:80
     volumes:
       - ./nginx.dev.conf:/etc/nginx/nginx.conf:ro
+    container_name: reverse-proxy-dev
     depends_on:
       - todo-frontend
+      - todo-backend
 
   todo-frontend:
     image: todo-frontend-dev
@@ -14,7 +16,7 @@ services:
       context: ./todo-frontend
       dockerfile: dev.Dockerfile
     volumes:
-      - ./todo-frontend:/usr/src/app
+      - ./todo-frontend/:/usr/src/app
       - /usr/src/app/node_modules
     command: ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5173"]
 
@@ -24,7 +26,7 @@ services:
       context: ./todo-backend
       dockerfile: dev.Dockerfile
     volumes:
-      - ./todo-backend:/usr/src/app
+      - ./todo-backend/:/usr/src/app
       - /usr/src/app/node_modules
     ports:
       - 3000:3000
