--- a/library-app/nginx.conf
+++ b/library-app/nginx.conf
@@ -5,11 +5,11 @@ http {
     listen 80;
 
     location / {
-      proxy_pass http://todo-frontend:80;
+      proxy_pass http://library-front:80;
     }
 
     location /api/ {
-      proxy_pass http://todo-backend:3000/;
+      proxy_pass http://library-back:4000/;
     }
   }
 }
