--- a/library-app/nginx.dev.conf
+++ b/library-app/nginx.dev.conf
@@ -4,7 +4,7 @@ http {
   server {
     listen 80;
 
-    # frontend (vite dev server)
+    # frontend
     location / {
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
